crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_vehicle_preview.snap
---
source: crates/app/src/tui/mod.rs
expression: screen
---
┌ Pick a unit (1) ─────────────────────────────────────────────────────────────────────────────────┐
│ Search: █                                                                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
▶ Manticore Heavy Tank  100t  Juggernaut  2755  BV 1897



                 ╔ Manticore Heavy Tank ══════════════════════════════════════════╗
                 ║100t   Inner Sphere   Juggernaut   intro 2755                   ║
                 ║                                                                ║
                 ║Move       Cruise 3  Flank 5  (Tracked)                         ║
                 ║Points     BV 1897   PV 52                                      ║
                 ║Cost       9,626,000 C-bills                                    ║
                 ║Armor       100  (Standard Armor)                               ║
                 ║Structure    30  (Standard)                                     ║
                 ║Type       Combat vehicle                                       ║
                 ║                                                                ║
                 ║Weapons                                                         ║
                 ║   1× Medium Laser      5       3/6/9                           ║
                 ║                                                                ║
                 ║Equipment                                                       ║
                 ║  (none)                                                        ║
                 ╚════════════════════════════════════════════════════════════════╝






[type] search  [^f] filter  [^g] gen  [^b] budget  [↑↓] select  [Tab] info  [Enter] add  [Esc] back
