crates/app/src/tui/snapshots/neurohelmet__tui__tests__e2e_weapons_scrollbar.snap
---
source: crates/app/src/tui/mod.rs
assertion_line: 2066
expression: screen
---
  1:Longbow
                        ┌HD────────┐                        ┌ HEAT ────────────────────────────────┐
                        │A 20/20   │                        │Heat 0 / 30   diss 20                 │
                        │██████████│                        │░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
                        │I 10/10   │                        │sinks 20× Single                      │
                        │██████████│                        │no penalties                          │
                        │          │                        │                                      │
                        │          │                        │                                      │
                        └──────────┘                        └──────────────────────────────────────┘
┌LA────────┐┌LT────────┐┌CT────────┐┌RT────────┐┌RA────────┐┌ PILOT ───────────────────────────────┐
│A 20/20   ││A 20/20   ││A 20/20   ││A 20/20   ││A 20/20   ││ Gunnery 4+   Piloting 5+   BV 1897   │
│██████████││██████████││██████████││██████████││██████████││ ░░░░░░   unhurt                      │
│I 10/10   ││R 6/6     ││R 6/6     ││R 6/6     ││I 10/10   │└──────────────────────────────────────┘
│██████████││██████████││██████████││██████████││██████████│┌ MOVE ────────────────────────────────┐
│          ││I 10/10   ││I 10/10   ││I 10/10   ││          ││ Walk 3  Run 5  Jump 0                │
│          ││██████████││██████████││██████████││          ││ stationary   [v]                     │
│          ││          ││          ││          ││          ││ standing                             │
│          ││          ││          ││          ││          │└──────────────────────────────────────┘
│          ││          ││          ││          ││          │┌ WEAPONS / AMMO / EQUIP ──────────────┐
│          ││          ││          ││          ││          ││ LRM 28          LT  H5    1/msl      ▲
└──────────┘└──────────┘└──────────┘└──────────┘└──────────┘│ LRM 29          LT  H5    1/msl      ║
            ┌LL────────┐            ┌RL────────┐            │ LRM 30          LT  H5    1/msl      ║
            │A 20/20   │            │A 20/20   │            │ LRM 31          LT  H5    1/msl      ║
            │██████████│            │██████████│            │ LRM 32          LT  H5    1/msl      ║
            │I 10/10   │            │I 10/10   │            │ LRM 33          LT  H5    1/msl      █
            │██████████│            │██████████│            │▶LRM 34          LT  H5    1/msl      ▼
            │          │            │          │            │──────────────────────────────────────│
            │          │            │          │            │ LRM 34   range 7/14/21               │
            └──────────┘            └──────────┘            └──────────────────────────────────────┘
 Spc:fire  u:unfire  c:crit  p:pilot  Tab:panel  ?:help
