crates/app/src/tui/snapshots/neurohelmet__tui__tests__year_range_facet_types_bounds.snap
---
source: crates/app/src/tui/mod.rs
expression: screen
---
┌ Pick a unit (0 of 3)   filters: 3000–305 ────────────────────────────────────────────────────────┐
│ Search: █                                                                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘





                    ╔ Filters ═════════════════════════════════════════════════╗
                    ║  Type:   (any)                                           ║
                    ║  Tech:   (any)                                           ║
                    ║  Class:  (any)                                           ║
                    ║  Role:   (any)                                           ║
                    ║  Era:    (any)                                           ║
                    ║  Year ≥: 3000                                            ║
                    ║▶ Year ≤: 305                                             ║
                    ║  Family: (any)                                           ║
                    ║  Avail era: (any)                                        ║
                    ║  Faction: (any)                                          ║
                    ║                                                          ║
                    ║[0-9] year  [⌫] del  [←→] ±1  [c] clear  [Esc] apply      ║
                    ╚══════════════════════════════════════════════════════════╝







[type] search  [^f] filter  [^g] gen  [^b] budget  [↑↓] select  [Tab] prev  [Enter] add  [Esc] back
